# aimageddon

./: CMakeLists.txt  README.md  build  main.cpp  run
cmake/: EnableCxx11.cmake
common/: connection.h  declarations.h  grid.h  player.h
communication/: CMakeLists.txt  connection.h  game_logger.cpp  game_logger.h  message.cpp  message.h  redis_client.h  server.cpp  server.h  tcp_connection.cpp  tcp_connection.h  tcp_player.cpp  tcp_player.h
cpp_redis/: CMakeLists.txt  Makefile  cmake_install.cmake
games/: CMakeLists.txt  lobby.cpp  lobby.h  lobby_test.cpp  match.cpp  match.h
games/round_based/: CMakeLists.txt  match.cpp  match.h  player.cpp  player.h
games/snake/: CMakeLists.txt  match.cpp  match.h  match_test.cpp  protocol.md
gflags/: CTestTestfile.cmake  cmake_install.cmake
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/include/gtest/internal/: gtest-port.h
